# wmh-synthseg-cheap

./: .gitignore  README.md  pyproject.toml
scripts/: infer.py
src/wmh_synthseg/: consts.py  inference.py  initialize.py  utils.py
src/wmh_synthseg/unet_3d/: buildingblocks.py  config.py  metrics.py  model.py
